# infra

./: Cargo.toml  Dockerfile  README.md  justfile
.github/: CODEOWNERS  FUNDING.yml
crates/avalanche/: Cargo.toml
crates/avalanche/src/: build.rs  config.rs  grpc.rs  main.rs  stream.rs  upload.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/service/: Cargo.toml
crates/service-client/: Cargo.toml
crates/service-client/src/: lib.rs
crates/service-core/: Cargo.toml
crates/service-core/src/: account.rs  auth.rs  crypto.rs  lib.rs  service.rs  token.rs
crates/service-grpc/: Cargo.toml  build.rs
crates/service-grpc/proto/: account.proto  auth.proto  avalanche.proto  collectable.proto  common.proto  endpoint.proto  options.proto  remote.proto  summit.proto  tracing.proto  vessel.proto
crates/service-grpc/src/: lib.rs  method.rs  proto.rs
crates/service/migrations/: 20240104222232_init.sql  20250514032009_endpoint-description.sql
crates/service/src/: account.rs  buildinfo.rs  client.rs  config.rs  database.rs  endpoint.rs  git.rs  grpc.rs  lib.rs  middleware.rs  process.rs  request.rs  server.rs  signal.rs  state.rs  tracing.rs
crates/service/src/account/: service.rs
crates/service/src/endpoint/: enrollment.rs  service.rs
crates/service/src/grpc/: auth.rs
crates/service/src/middleware/: extract_token.rs  grpc_method.rs  log.rs
crates/summit/: Cargo.toml
crates/summit/migrations/: 20250403180711_init.sql  20250514135700_add_added_field.sql  20260508203629_root-index-source.sql  20260625165754_drop_endpoint.sql
crates/summit/src/: builder.rs  config.rs  grpc.rs  main.rs  manager.rs  profile.rs  project.rs  queue.rs  repository.rs  repository_manager.rs  route.rs  routes.rs  seed.rs  state.rs  task.rs  template.rs  templates.rs  worker.rs
crates/summit/src/profile/: index.rs  refresh.rs  remote.rs
crates/summit/src/repository/: create.rs  refresh.rs  reindex.rs
crates/summit/src/task/: build.rs  create.rs  query.rs
crates/summit/src/template/: autoreload.rs  bundled.rs  filter.rs  function.rs
crates/summit/src/templates/: autoreload.rs  bundled.rs  filters.rs  functions.rs  impl_autoreload.rs  impl_bundled.rs
crates/summit/static/: style.css
crates/summit/templates/: 404.html.jinja  index-builders.html.jinja  index-recent-events.html.jinja  index.html.jinja  queue.html.jinja  skel.html.jinja  tasks-table.html.jinja  tasks.html.jinja
crates/vessel/: Cargo.toml
crates/vessel/migrations/: 20251202173729_channel-version.sql  20260504204534_moss-repo-format.sql  20260625165754_drop_endpoint.sql
crates/vessel/src/: channel.rs  config.rs  grpc.rs  main.rs  migration.rs  package.rs  state.rs  stream.rs  upload.rs  worker.rs
crates/vessel/src/channel/: db.rs  prune.rs  version.rs
deployment/: README.md  aos-avalanche-rs.service  aos-summit-rs.service  aos-vessel-rs.service  aosinfra.dante.lan.caddyfile  aosinfra.lan.caddyfile  avalanche-config.toml  fix-hung-repo-clones.bash  source-me-to-deploy-rust-services.bash  summit-config.toml  summit-seed.toml  vessel-config.toml  vessel-import-invocation.txt  vessel-stone-import-list.txt
test/: Caddyfile  docker-compose.yaml
test/avalanche/: config.toml
test/import/: nano-8.3-33-1-x86_64.stone  nano-8.4-34-1-x86_64.stone  nano-8.4-35-1-x86_64.stone  nano-dbginfo-8.3-33-1-x86_64.stone  nano-dbginfo-8.4-34-1-x86_64.stone  nano-dbginfo-8.4-35-1-x86_64.stone
test/summit/: config.toml  seed.toml
test/vessel/: config.toml
