[package]
name = "avalanche"
version = "0.1.0"
edition.workspace = true

[dependencies]
service = { path = "../service" }

async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
clap.workspace = true
color-eyre.workspace = true
flate2.workspace = true
futures-util.workspace = true
hex.workspace = true
http.workspace = true
itertools.workspace = true
prost.workspace = true
sha2.workspace = true
snafu.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

tokio-util = { workspace = true , features = ["io"] }
