[package]
name = "cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service-client = { path = "../service-client" }
service-grpc = { path = "../service-grpc" }
service-core = { path = "../service-core" }

clap.workspace = true
color-eyre.workspace = true
tonic.workspace = true
tokio.workspace = true
