[package]
name = "service-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
service-core = { path = "../service-core" }
service-grpc = { path = "../service-grpc" }

async-trait.workspace = true
base64.workspace = true
futures-util.workspace = true
http.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tower.workspace = true
tracing.workspace = true

[lints]
workspace = true
