[package]
name = "service-grpc"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
service-core = { path = "../service-core" }

prost.workspace = true
tonic.workspace = true
tonic-prost.workspace = true

[build-dependencies]
prost-build.workspace = true
prost-types.workspace = true
prost-reflect.workspace = true
tonic-prost-build.workspace = true

[lints]
workspace = true
