[package]
name = "summit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[features]
default = ["templates-bundled"]
templates-bundled = ["dep:include_dir"]
templates-autoreload = ["dep:camino", "dep:minijinja-autoreload", "minijinja/loader"]

[dependencies]
service = { path = "../service" }

arc-swap.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
color-eyre.workspace = true
dag.workspace = true
derive_more.workspace = true
flate2.workspace = true
futures-util.workspace = true
hex.workspace = true
http.workspace = true
http-serde.workspace = true
itertools.workspace = true
minijinja.workspace = true
moss.workspace = true
serde.workspace = true
sha2.workspace = true
snafu.workspace = true
sqlx.workspace = true
stone.workspace = true
stone_recipe.workspace = true
strum.workspace = true
toml.workspace = true
tonic.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

camino = { workspace = true, optional = true }
include_dir = { workspace = true, optional = true }
minijinja-autoreload = { workspace = true, optional = true }
urlencoding = "2.1.3"

[lints]
workspace = true
