[package]
name = "vessel"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
service = { path = "../service" }

async-trait.workspace = true
clap.workspace = true
chrono.workspace = true
color-eyre.workspace = true
derive_more.workspace = true
futures-util.workspace = true
hex.workspace = true
http.workspace = true
http-serde.workspace = true
itertools.workspace = true
moss.workspace = true
prost.workspace = true
serde.workspace = true
sha2.workspace = true
snafu.workspace = true
sqlx.workspace = true
stone.workspace = true
strum.workspace = true
tokio.workspace = true
toml.workspace = true
tonic.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
natural-sort-rs.workspace = true

[dev-dependencies]
test-case.workspace = true

[lints]
workspace = true
